Time: 447 ms (20.03%), Space: 50.6 MB (64.11%) - LeetHub