@@ -2,16 +2,15 @@ class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
         int target = 0;
         Arrays.sort(nums);
-        Set<List<Integer>> set = new HashSet<>();
-        List<List<Integer>> result = new ArrayList<>();
+        Set<List<Integer>> s = new HashSet<>();
+        List<List<Integer>> output = new ArrayList<>();
         for (int i = 0; i < nums.length; i++){
             int j = i + 1;
             int k = nums.length - 1;
             while (j < k) {
                 int sum = nums[i] + nums[j] + nums[k];
                 if (sum == target) {
-                    if(set.add(Arrays.asList(nums[i], nums[j], nums[k])))
-                        result.add(List.of(nums[i], nums[j], nums[k]));
+                    s.add(Arrays.asList(nums[i], nums[j], nums[k]));
                     j++;
                     k--;
                 } else if (sum < target) {
@@ -21,7 +20,7 @@ class Solution {
                 }
             }
         }
-        return result;
+        output.addAll(s);
+        return output;
     }
-
 }
